<resources>
    <string name="app_name">Bacter Compass And Strobe Light</string>
    <string name="zerodeg">0°</string>
    <string name="current_acceleration">Current Acceleration</string>
    <string name="x">X:</string>
    <string name="_0_0">0.0</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="dev">Developed by:BdFreak</string>
    <string name="type_what_you_want_to_search">Type What You Want To Search</string>
    <string name="search_location">Search Location</string>
    <string name="action_settings">Settings</string>
    <string name="strobe">Strobe Light</string>
    <string name="poweroff">poweroff</string>
    <string name="_0">0</string>
</resources>
