<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:id="@+id/activity_compass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bacter.bactercompass.CompassActivity">

    <TextView
        android:id="@+id/txt_azimuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="59dp"
        android:gravity="center_horizontal"
        android:text="@string/zerodeg"
        android:textAlignment="center"
        android:textColor="@color/colorAccent2"
        android:textSize="44sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_compass"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:layout_below="@id/img_compass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="186dp"
        android:contentDescription="@string/app_name"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal|center"
        android:scaleType="fitCenter"
        android:src="@drawable/compass"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="138dp"
        android:layout_height="29dp"
        android:layout_below="@id/img_compass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="-338dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:gravity="center"
        android:text="@string/dev"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:textStyle="normal" />
</RelativeLayout>