<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_strobe"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bacter.bactercompass.StrobeActivity">

    <SeekBar
        android:id="@+id/sb1"
        android:layout_width="484dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="265dp"
        android:thumb="@drawable/tred1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="69dp"
        android:background="@color/background"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/strobe"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/dev"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_below="@id/editText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="530dp"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/dev"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RelativeOverlap,RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="167dp"
        android:background="@color/background"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/colorAccent2"
        android:textSize="40sp"
        tools:ignore="Autofill,LabelFor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ImageButton
        android:id="@+id/bt1"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/poweroff"
        android:contentDescription="@string/poweroff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp" />
</RelativeLayout>